Add spm support

--- a/package.json
+++ b/package.json
@@ -28,5 +28,14 @@
     "files": [
       "leaflet-providers.js"
     ]
+  },
+  "spm": {
+    "main": "leaflet-providers.js",
+    "dependencies": {
+      "leaflet": "~0.7.3"
+    },
+    "devDependencies": {
+      "jquery": "1.8.3"
+    }
   }
 }
